--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
     "name": "proengeno/ediseg",
     "require": { 
-        "php": ">=5.5.0",
+        "php": ">=7.2",
         "proengeno/edifact": "dev-master"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.3"
+        "phpunit/phpunit": "^8"
     },
     "autoload": {
         "psr-4": {
