fix: Update php version in composer

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "proengeno/ediseg",
     "require": { 
-        "php": ">=7.2",
+        "php": "^7.2",
         "proengeno/edifact": "dev-master"
     },
     "require-dev": {
