--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "proengeno/ediseg",
     "require": { 
-        "php": "^7.4|^8.0",
+        "php": "^8.0",
         "proengeno/edifact": "dev-master"
     },
     "require-dev": {
